--- a/ollama.yaml
+++ b/ollama.yaml
@@ -15,8 +15,7 @@ spec:
     spec:
       containers:
         - name: ollama-tinyllama
-          image: shubhbuz/ollama-tinyllama:initial  # <-- image goes here
-          command: ["serve"]
+          image: shubhbuz/ollama-tinyllama:v1
           ports:
             - containerPort: 11434
           volumeMounts:
