adding init container

--- a/ollama.yaml
+++ b/ollama.yaml
@@ -13,6 +13,19 @@ spec:
       labels:
         app: ollama
     spec:
+      initContainers:
+        - name: model-puller
+          image: shubhbuz/ollama-tinyllama:v3
+          command: ["/bin/sh", "-c"]
+          args:
+          - |
+            ollama serve &
+            sleep 15
+            ollama pull tinyllama
+            ollama list
+          volumeMounts:
+          - name: ollama-data
+            mountPath: /root/.ollama
       containers:
         - name: ollama-tinyllama
           image: shubhbuz/ollama-tinyllama:v3
