--- a/llm-service-rollout.yaml
+++ b/llm-service-rollout.yaml
@@ -71,3 +71,17 @@ spec:
   ports:
     - port: 80
       targetPort: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: llm-service-nodeport
+  namespace: llm
+spec:
+  type: NodePort
+  selector:
+    app: llm-service
+  ports:
+    - port: 80           # Service port (internal)
+      targetPort: 8000   # Your app port
+      nodePort: 30080    # External port on every node
