--- a/llm-service-rollout.yaml
+++ b/llm-service-rollout.yaml
@@ -66,7 +66,7 @@ metadata:
   namespace: llm
 spec:
   selector:
-    app: llm-service
+    app: llm-service-preview
   ports:
     - port: 80
       targetPort: 8000
